--- a/index.html
+++ b/index.html
@@ -26,52 +26,52 @@
 
 <body>
   <!-- Navbar -->
-  <nav class="bg-[#171C2A] py-4">
-    <div class="navBar">
+  <nav className="bg-[#171C2A] py-4">
+    <div className="navBar">
       <a href="index.html">
-        <img src="./images/logo.png" alt="LWS" class="max-w-[140px]" />
+        <img src="./images/logo.png" alt="LWS" className="max-w-[140px]" />
       </a>
 
-      <div class="flex gap-4">
-        <a href="#home" class="navHome" id="lws-home"> Home </a>
-        <a href="cart.html" class="navCart" id="lws-cart">
-          <i class="text-xl fa-sharp fa-solid fa-bag-shopping"></i>
+      <div className="flex gap-4">
+        <a href="#home" className="navHome" id="lws-home"> Home </a>
+        <a href="cart.html" className="navCart" id="lws-cart">
+          <i className="text-xl fa-sharp fa-solid fa-bag-shopping"></i>
           <span id="lws-totalCart">0</span>
         </a>
       </div>
     </div>
   </nav>
   <!-- Navbar ends -->
-  <main class="py-16">
-    <div class="productWrapper">
+  <main className="py-16">
+    <div className="productWrapper">
       <!-- products container -->
-      <div class="productContainer" id="lws-productContainer">
+      <div className="productContainer" id="lws-productContainer">
         <!-- product item -->
-        <div class="lws-productCard">
-          <img class="lws-productImage" src="https://i.dummyjson.com/data/products/59/thumbnail.jpg" alt="product" />
-          <div class="p-4 space-y-2">
-            <h4 class="lws-productName">Spring and summershoes</h4>
-            <p class="lws-productCategory">Mens shoes</p>
-            <div class="flex items-center justify-between pb-2">
-              <p class="productPrice">BDT <span class="lws-price">400</span></p>
-              <p class="productQuantity">QTY <span class="lws-quantity">10</span></p>
+        <div className="lws-productCard">
+          <img className="lws-productImage" src="https://i.dummyjson.com/data/products/59/thumbnail.jpg" alt="product" />
+          <div className="p-4 space-y-2">
+            <h4 className="lws-productName">Spring and summershoes</h4>
+            <p className="lws-productCategory">Mens shoes</p>
+            <div className="flex items-center justify-between pb-2">
+              <p className="productPrice">BDT <span className="lws-price">400</span></p>
+              <p className="productQuantity">QTY <span className="lws-quantity">10</span></p>
             </div>
-            <button class="lws-btnAddToCart">Add To Cart</button>
+            <button className="lws-btnAddToCart">Add To Cart</button>
           </div>
         </div>
         <!-- product item ends -->
 
         <!-- product item -->
-        <div class="lws-productCard">
-          <img class="lws-productImage" src="https://i.dummyjson.com/data/products/40/thumbnail.jpg" alt="product" />
-          <div class="p-4 space-y-2">
-            <h4 class="lws-productName">Women Winter Clothes</h4>
-            <p class="lws-productCategory">Tops</p>
-            <div class="flex items-center justify-between pb-2">
-              <p class="productPrice">BDT <span class="lws-price">100</span></p>
-              <p class="productQuantity">QTY <span class="lws-quantity">30</span></p>
+        <div className="lws-productCard">
+          <img className="lws-productImage" src="https://i.dummyjson.com/data/products/40/thumbnail.jpg" alt="product" />
+          <div className="p-4 space-y-2">
+            <h4 className="lws-productName">Women Winter Clothes</h4>
+            <p className="lws-productCategory">Tops</p>
+            <div className="flex items-center justify-between pb-2">
+              <p className="productPrice">BDT <span className="lws-price">100</span></p>
+              <p className="productQuantity">QTY <span className="lws-quantity">30</span></p>
             </div>
-            <button class="lws-btnAddToCart">Add To Cart</button>
+            <button className="lws-btnAddToCart">Add To Cart</button>
           </div>
         </div>
         <!-- product item ends -->
@@ -79,39 +79,39 @@
       <!-- products container ends -->
       <div>
         <!-- Product Input Form -->
-        <div class="formContainer">
-          <h4 class="formTitle">Add New Product</h4>
-          <form class="space-y-4 text-[#534F4F]" id="lws-addProductForm">
+        <div className="formContainer">
+          <h4 className="formTitle">Add New Product</h4>
+          <form className="space-y-4 text-[#534F4F]" id="lws-addProductForm">
             <!-- product name -->
-            <div class="space-y-2">
+            <div className="space-y-2">
               <label for="lws-inputName">Product Name</label>
-              <input class="addProductInput" id="lws-inputName" type="text" required />
+              <input className="addProductInput" id="lws-inputName" type="text" required />
             </div>
             <!-- product category -->
-            <div class="space-y-2">
+            <div className="space-y-2">
               <label for="lws-inputCategory">Category</label>
-              <input class="addProductInput" id="lws-inputCategory" type="text" required />
+              <input className="addProductInput" id="lws-inputCategory" type="text" required />
             </div>
             <!-- product image url -->
-            <div class="space-y-2">
+            <div className="space-y-2">
               <label for="lws-inputImage">Image Url</label>
-              <input class="addProductInput" id="lws-inputImage" type="text" required />
+              <input className="addProductInput" id="lws-inputImage" type="text" required />
             </div>
             <!-- price & quantity container -->
-            <div class="grid grid-cols-2 gap-8 pb-4">
+            <div className="grid grid-cols-2 gap-8 pb-4">
               <!-- price -->
-              <div class="space-y-2">
+              <div className="space-y-2">
                 <label for="ws-inputPrice">Price</label>
-                <input class="addProductInput" type="number" id="lws-inputPrice" required />
+                <input className="addProductInput" type="number" id="lws-inputPrice" required />
               </div>
               <!-- quantity -->
-              <div class="space-y-2">
+              <div className="space-y-2">
                 <label for="lws-inputQuantity">Quantity</label>
-                <input class="addProductInput" type="number" id="lws-inputQuantity" required />
+                <input className="addProductInput" type="number" id="lws-inputQuantity" required />
               </div>
             </div>
             <!-- submit button -->
-            <button type="submit" id="lws-inputSubmit" class="submit">Add Product</button>
+            <button type="submit" id="lws-inputSubmit" className="submit">Add Product</button>
           </form>
         </div>
         <!-- Product Input Form Ends -->
